--- a/chrome-extension/src/options.css
+++ b/chrome-extension/src/options.css
@@ -49,6 +49,26 @@ header h1 {
     margin-bottom: 0;
 }
 
+.header-title {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.header-title h1 {
+    margin-bottom: 0;
+    line-height: 1;
+    position: relative;
+}
+
+.logo-icon {
+    width: 24px;
+    height: 24px;
+    display: block;
+    position: relative;
+    top: 7px;
+}
+
 section {
     margin-bottom: 32px;
 }
